<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <View style="@style/divideline" />

        <View style="@style/divideline2" />

        <RelativeLayout
            android:id="@+id/ll_ending_collect"
            style="@style/scroll_linearlayout"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ending_collect"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18" />

            <CheckBox
                android:id="@+id/cb_ending_collect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <View style="@style/divideline3" />

        <RelativeLayout
            android:id="@+id/ll_overtime_collect"
            style="@style/scroll_linearlayout"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overtime_collect"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18" />

            <CheckBox
                android:id="@+id/cb_overtime_collect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <View style="@style/divideline3" />

        <LinearLayout
            android:id="@+id/ll_overtime_collectrange"
            style="@style/scroll_linearlayout"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overtime_collectrange"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:id="@+id/tv_overtime_collectrange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="60"
                android:textColor="@color/gray_ccc"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

        <View style="@style/divideline3" />

        <RelativeLayout
            android:id="@+id/ll_ending_turn"
            style="@style/scroll_linearlayout"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ending_turn"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18" />

            <CheckBox
                android:id="@+id/cb_ending_turn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <View style="@style/divideline3" />

        <RelativeLayout
            android:id="@+id/ll_hang_turn"
            style="@style/scroll_linearlayout"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hang_turn"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18" />

            <CheckBox
                android:id="@+id/cb_hang_turn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <View style="@style/divideline3" />

        <RelativeLayout
            android:id="@+id/ll_hang_attendturn"
            style="@style/scroll_linearlayout"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hang_attendturn"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18" />

            <CheckBox
                android:id="@+id/cb_hang_attendturn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <View style="@style/divideline3" />

        <RelativeLayout
            android:id="@+id/ll_meeting_hang_attendturn"
            style="@style/scroll_linearlayout"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meeting_hang_attendturn"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18" />

            <CheckBox
                android:id="@+id/cb_meeting_hang_attendturn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <View style="@style/divideline3" />

        <RelativeLayout
            android:id="@+id/rl_custom_callrule"
            style="@style/scroll_linearlayout"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_callrule"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18" />

            <ImageView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_alignParentRight="true"
                android:src="@drawable/icon_left" />
        </RelativeLayout>

        <View style="@style/divideline" />
    </LinearLayout>

</ScrollView>